--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <ul>
         <li><a href="recipes/pizza.html">Pepperoni Pizza</a></li>
         <li><a href="recipes/mac.html">Mac'n'Cheese</a></li>
+        <li><a href="recipes/alfredo.html">Chicken Fettucine Alfredo</a></li>
 
     </ul>
         
