fixed images werent showing

--- a/recipes/alfredo.html
+++ b/recipes/alfredo.html
@@ -5,7 +5,7 @@
 
     <body>
         <h1>Chicken Fettucine Alfredo</h1>
-        <img src="/home/nico/the-odin-project/odin-recipes/recipes-images/alfredo.jpg"
+        <img src="../recipes-images/alfredo.jpg"
             width='300'
             height='200'>
             <p>Need a quick and filling dinner to impress someone with? Try out the recipe and I can guarantee you will be satisfied!</p>
