--- a/recipes/mac.html
+++ b/recipes/mac.html
@@ -5,7 +5,7 @@
 
     <body>
         <h1>Mac'n'Cheese</h1>
-        <img src="/home/nico/the-odin-project/odin-recipes/recipes-images/mac.jpeg"
+        <img src="../recipes-images/mac.jpeg"
              width="300"
              height="200">
         <p>Impress all of your friends and family by bringing the worlds best macaroni and cheese to this year's Thanksgiving!</p>
