--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <body>
         <h1>Pepperoni Pizza</h1>
-        <img src="/home/nico/the-odin-project/odin-recipes/recipes-images/pizza.jpg"
+        <img src="../recipes-images/pizza.jpg"
             width="300"
             height="200">
         <p>Learn how to make this easy and tasty treat that's big enough to serve to the whole family!</p>
